<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_back"
    tools:context=".My_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:shadowColor="#3A3A3A"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/my_profile"
                android:textColor="#C31515"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/todo"
                android:elevation="10sp"
                android:src="@drawable/default_profile"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myProfile">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/name"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profilename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/your_name"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/register_no_p"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profiledno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/your_dno"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/email_p"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profileemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/your_email"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/phone_number_p"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profilephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/your_phone"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/date_of_birth_p"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profiledob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/your_dob"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:gravity="center_horizontal"
                        android:shadowColor="#3A3A3A"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/if_there_any_corrections_in_your_profile_nkindly_contact_your_admin"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <Button
                    android:id="@+id/changeProfile"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button"
                    android:onClick="back"
                    android:shadowColor="#878787"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/change_profile"
                    android:textColor="#E3E3E3" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>