<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/round_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#575757"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/create_a_new_account_here"
                android:textColor="#6C4DB1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/dno"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hint="@string/dno"
                android:inputType="textPersonName"
                android:padding="10sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.08" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:padding="10sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dno"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="344dp"
                android:autofillHints=""
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullname"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ffffff"
                    app:hintEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleDrawable="@drawable/ic_visibility_off_black_24dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:autofillHints=""
                        android:background="@drawable/edit_round"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textWebPassword"
                        android:padding="10sp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#D6D6D6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hint="@string/phonenumber"
                android:inputType="number"
                android:padding="10sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextFields" />

          <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="196dp"
                android:autofillHints=""
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:padding="10sp"

                android:textColor="#FFFFFF"
                android:textColorHint="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/registerBtn"
                android:background="@drawable/button"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dob"
                app:layout_constraintVertical_bias="0.06999999" />

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/already_registered_login_here"
                android:textColor="#2962FF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn"
                app:layout_constraintVertical_bias="0.26" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="99dp"
                android:layout_height="83dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>